--- a/local/zenml.yml
+++ b/local/zenml.yml
@@ -1,17 +1,15 @@
 # helm install zenml-server ./zenml --values zenml.yml
-
-service:
-  type: ClusterIP
-  port: 8080
-
-ingress:
-  enabled: true
-  className: nginx
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-  hosts:
-    - host: zenml.localhost
-      paths:
-        - path: /
-          pathType: Prefix
+zenml:
+  service:
+    type: ClusterIP
+    port: 8080
+  ingress:
+    enabled: true
+    className: nginx
+    annotations:
+      nginx.ingress.kubernetes.io/ssl-redirect: "false" # Change to "true" if you want HTTPS
+      nginx.ingress.kubernetes.io/rewrite-target: / # Enable URL path rewriting
+    host: zenml.localhost # Replace with your desired hostname
+    path: /
+    tls:
+      enabled: false
