--- a/local/manifests/lakefs.yaml
+++ b/local/manifests/lakefs.yaml
@@ -1,13 +1,27 @@
 # secrets:
 #   databaseConnectionString: postgres://postgres:myPassword@postsql-server-postgresql.default.svc.cluster.local:5432/lakefs?search_path=lakefs
 
-lakefsConfig: |-
+ingress:
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+  ingressClassName: nginx
+  defaultBackend: {}
+  hosts:
+    - host: lakefs.localhost
+      paths:
+        - /
+
+lakefsConfig: |
   database:
     type: local
   blockstore:
     type: gs
     gs:
-      credentials_json: /etc/lakefs/credentials/credentials.json
+      credentials_file: /etc/lakefs/credentials/credentials.json
 
 extraVolumeMounts:
   - name: gcs-credentials
@@ -17,4 +31,3 @@ extraVolumes:
   - name: gcs-credentials
     secret:
       secretName: gcs-credentials
-
