--- a/local/manifests/mlflow.yml
+++ b/local/manifests/mlflow.yml
@@ -1,16 +1,31 @@
 tracking:
   auth:
-    enabled: true
-    username: admin
-    password: slmops
+    enabled: false
+    username: slmops
+    password: j6rXZAkyS}MOeYha
   ingress:
     enabled: true
     hostname: mlflow.localhost
     ingressClassName: nginx
-  service:
-    ports:
-      http: 5000
-      https: 5443
+    annotations:
+      nginx.ingress.kubernetes.io/proxy-body-size: "5000m"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "800"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "800"
+      nginx.ingress.kubernetes.io/proxy-connect-timeout: "800"
+    tls: false
+  resources:
+    limits:
+      memory: "6Gi"
+      cpu: "4"
+    requests:
+      memory: "4Gi"
+      cpu: "2"
+  extraEnvVars:
+    - name: GUNICORN_CMD_ARGS
+      value: "--timeout 600 --workers 4"
+
+postgresql:
+  enabled: false
 
 minio:
   enabled: false
